Start of init scope
Signed-off-by: Ryan Nett <JNett96@gmail.com>